--- a/templates/all_papers.html
+++ b/templates/all_papers.html
@@ -1,19 +1,18 @@
 {% extends "base.html" %}
-{% block title %}All Reviewed Papers{% endblock %}
+{% block title %}All Papers{% endblock %}
 {% block content %}
-<h1 class="mt-4">All Reviewed Papers</h1>
-<form id="papers-form" method="post">
-    <div class="actions mb-3">
-        <button type="submit" name="action" value="move_to_unread" class="btn btn-primary mr-2 mb-2">Move to Unread</button>
-        <button type="submit" name="action" value="move_to_left_swiped" class="btn btn-danger mr-2 mb-2">Move to Swiped Left</button>
-        <button type="button" onclick="toggleSelectAll(this)" class="btn btn-secondary mr-2 mb-2">Select All</button>
+<h1 class="mt-4">All Papers</h1>
+<form method="post">
+    <div class="mb-3">
+        <button type="submit" name="action" value="move_to_unread" class="btn btn-primary">Move to Unread</button>
+        <button type="submit" name="action" value="move_to_left_swiped" class="btn btn-danger">Move to Swiped Left</button>
     </div>
-    <table class="table table-striped table-hover">
+    <table class="table table-striped table-hover mt-3">
         <thead>
             <tr>
-                <th><input type="checkbox" id="select-all" onclick="toggleSelectAll(this)"></th>
-                <th>Status</th>
+                <th><input type="checkbox" id="select_all"></th>
                 <th>Title</th>
+                <th>Status</th>
                 <th>Actions</th>
             </tr>
         </thead>
@@ -21,40 +20,49 @@
             {% for paper in papers %}
             <tr>
                 <td><input type="checkbox" name="selected_papers" value="{{ paper.paper_id }}"></td>
+                <td>{{ paper.title }}</td>
                 <td>
-                    {% if paper.status == 'left_swiped' %}
-                        <i class="fas fa-times text-danger" data-toggle="tooltip" title="Disliked"></i>
-                    {% elif paper.status == 'unread' %}
-                        <i class="fas fa-book-open text-primary" data-toggle="tooltip" title="Unread"></i>
+                    {% if paper.status == 'unread' %}
+                        <span title="Unread">
+                            <i class="fas fa-bookmark"></i> Unread
+                        </span>
                     {% elif paper.status == 'in_review' %}
-                        <i class="fas fa-hourglass-half text-warning" data-toggle="tooltip" title="In Review"></i>
+                        <span title="In Review">
+                            <i class="fas fa-hourglass-half"></i> In Review
+                        </span>
                     {% elif paper.status == 'read' %}
-                        <i class="fas fa-check text-success" data-toggle="tooltip" title="Read"></i>
+                        <span title="Read">
+                            <i class="fas fa-check-circle"></i> Read
+                        </span>
+                    {% elif paper.status == 'left_swiped' %}
+                        <span title="Swiped Left">
+                            <i class="fas fa-times-circle"></i> Swiped Left
+                        </span>
                     {% else %}
-                        <i class="fas fa-question-circle text-muted" data-toggle="tooltip" title="Unknown Status"></i>
+                        {{ paper.status }}
                     {% endif %}
                 </td>
-                <td>{{ paper.title }}</td>
-                <td><a href="{{ paper.link }}" target="_blank">View Abstract</a></td>
+                <td>
+                    <a href="{{ url_for('view_paper', paper_id=paper.paper_id.replace('http://', '')) }}">View & Take Notes</a>
+                </td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
 </form>
-{% endblock %}
-{% block scripts %}
-<script>
-    function toggleSelectAll(checkbox) {
-        var checkboxes = document.querySelectorAll('input[name="selected_papers"]');
-        checkboxes.forEach(function(cb) {
-            cb.checked = checkbox.checked;
-        });
-    }
 
-    // Initialize tooltips
-    $(function () {
-        $('[data-toggle="tooltip"]').tooltip()
-    });
+<!-- Include Font Awesome for icons -->
+{% block scripts %}
+<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+<script>
+    // Select/Deselect all checkboxes
+    document.getElementById('select_all').onclick = function() {
+        var checkboxes = document.getElementsByName('selected_papers');
+        for (var checkbox of checkboxes) {
+            checkbox.checked = this.checked;
+        }
+    }
 </script>
+{% endblock %}
 {% endblock %}
 
